# simulateur-controleur-aerien

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-local.txt  requirements-romeo.txt  start_romeo.ps1
.github/workflows/: ci.yml
docs/: PERFORMANCE.md  VALIDATION.md
docs/archive/web-v1/: app.js  index.html  style.css
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  audio.ts  index.css  radar.ts  types.ts  useSim.ts
frontend/src/components/: DebriefPanel.tsx  ExercisePanel.tsx  InstructorPanel.tsx  (+6 more)
model/whisper-lora-adapter/: tokenizer_config.json
src/: 01_audio_preprocessing.py  02_airspace_graph.py  03_bluesky_connector.py  04_ner_extraction.py  05_whisper_llm_blank_test.py  06_prepare_dataset.py  07_baseline_wer.py  08_finetune_whisper_lora.py  09_evaluate.py  10_inference_demo.py  11_build_kb.py  12_retrieval_test.py  13_llm_interpret.py  14_evaluate_rag.py  15_pipeline_demo.py  16_graph_demo.py  atc_ai.py  atc_app.py  atc_asr.py  atc_audio.py  atc_callsign.py  atc_data.py  atc_exercise.py  atc_llm.py  atc_sim.py  bluesky_runtime.py  graph_secteur.py  job_finetune.slurm  job_finetune_multi.slurm  job_rag.slurm  job_server.slurm  kb_oaci.py  live_demo.py  live_voice_session.py  make_pilot_voices.py  pipeline_e2e.py  radar_anim.py  radar_replay.py  radar_scope.py  readback.py  (+12 more)
src/scenarios/: arrivees_reims.json  conflit_frontal.json  trafic_mixte.json
tests/: README.md  conftest.py  test_atc_ai.py  test_atc_callsign.py  test_atc_sim.py  test_bluesky_connector.py  test_graph_secteur.py  test_readback.py
tools/: capture_media.py
validation/: 01_cpa_analytique.py  02_cpa_vs_bluesky.py  03_parseur_eval.py  04_generateur_eval.py  05_performance.py  results.json  results_perf.json  run_all.py
